# which_problem

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check_changelog.yml  ci.yml
cargo-whichp/: Cargo.toml  README.md
cargo-whichp/src/: cli.rs  main.rs
src/: file_state.rs  lib.rs  path_part.rs  path_with_state.rs  problem.rs  program.rs  suggest.rs  which.rs
which_problem/: Cargo.toml  LICENSE  README.md  cargo.toml
which_problem/src/: file_state.rs  lib.rs  path_part.rs  path_with_state.rs  program.rs  suggest.rs  which.rs
