[package]
name = "which_problem"
version = "0.1.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Diganose your executable lookup problems with this rust library"
documentation = "https://docs.rs/which_problem"
keywords = ["executable", "which", "lookup"]

[dependencies]
is_executable = "1.0.1"
itertools = "0.14.0"
ordered-float = "3.4.0"
rayon = "1.6.1"
strsim = "0.10.0"

[dev-dependencies]
tempfile = "3.3.0"
